--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
     "react-responsive": "^4.1.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-slick": "^0.22.3",
     "slick-carousel": "^1.8.1",
